--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section>
   <div style="width: 90%; border: 1px solid green; margin:auto;">
-    <ng-marquee>
+    <ng-marquee duration="30">
       <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank"> https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
     </ng-marquee>
   </div>
