Improvements to css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
+<h1 style="text-align: center;">ng-marquee</h1>
 <section>
+    <h2>Basic Example</h2>
+    <div style="width: 90%; border: 1px solid green; margin:auto;">
+      <ng-marquee>
+        <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank"> https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
+      </ng-marquee>
+    </div>
+  </section>
+  <!-- With Duration Property -->
+<section>
+  <h2>With Duration Property</h2>
   <div style="width: 90%; border: 1px solid green; margin:auto;">
     <ng-marquee duration="30">
       <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank"> https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
