--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,36 +14,92 @@
 <!-- Speed Adjustment -->
 <section>
   <h2>Speed Adjustment</h2>
-  <div style="width: 90%; border: 1px solid green; margin:auto;">
-    <ng-marquee duration="30">
+
+  <!-- Default -->
+  <div>
+    <h3>Default</h3>
+    <ng-marquee>
       <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
           https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
     </ng-marquee>
   </div>
+
+  <div>
+    <h3>Drowsy</h3>
+    <ng-marquee speed="drowsy">
+      <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
+          https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
+    </ng-marquee>
+  </div>
+
+
+  <div>
+    <h3>Slow</h3>
+    <ng-marquee speed="slow">
+      <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
+          https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
+    </ng-marquee>
+  </div>
+
+  <div>
+    <h3>Normal</h3>
+    <ng-marquee speed="normal">
+      <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
+          https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
+    </ng-marquee>
+  </div>
+
+
+  <div>
+    <h3>Fast</h3>
+    <ng-marquee speed="fast">
+      <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
+          https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
+    </ng-marquee>
+  </div>
+
+  <div>
+    <h3>Swift</h3>
+    <ng-marquee speed="swift">
+      <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
+          https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
+    </ng-marquee>
+  </div>
+
+
+  <div>
+    <h3>Hyper</h3>
+    <ng-marquee speed="hyper">
+      <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
+          https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
+    </ng-marquee>
+  </div>
+
+
 </section>
 
 <!-- Direction Change -->
 <section>
   <h2>Direction Change</h2>
 
-  <h3>Left</h3>
-  <div style="width: 90%; border: 1px solid green; margin:auto;">
+  <div>
+    <h3>Left</h3>
     <ng-marquee direction="left">
       <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
           https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
     </ng-marquee>
   </div>
 
-  <h3>Right</h3>
-  <div style="width: 90%; border: 1px solid green; margin:auto;">
+  <div>
+    <h3>Right</h3>
     <ng-marquee direction="right">
       <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
           https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
     </ng-marquee>
   </div>
 
-  <h3>Alternate</h3>
-  <div style="width: 90%; border: 1px solid green; margin:auto;">
+  <div>
+    <h3>Alternate</h3>
     <ng-marquee direction="alternate">
       <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
           https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
