added stopOn Hover support

--- a/projects/ng-marquee/src/lib/ng-marquee/ng-marquee.component.css
+++ b/projects/ng-marquee/src/lib/ng-marquee/ng-marquee.component.css
@@ -31,6 +31,11 @@
     animation-duration: 2s;
 }
 
+/* Pause animation on hover */
+.ng-marquee.ng-marquee-stop-on-hover:hover>span {
+    animation-play-state: paused;
+}
+
 @keyframes movement-smooth {
     from {
         transform: translateX(0%);
