--- a/projects/ng-marquee/src/lib/ng-marquee/ng-marquee.component.html
+++ b/projects/ng-marquee/src/lib/ng-marquee/ng-marquee.component.html
@@ -7,8 +7,10 @@
   'ng-marquee-speed-normal': marqueeSpeed.normal === speed,
   'ng-marquee-speed-fast': marqueeSpeed.fast === speed,
   'ng-marquee-speed-swift': marqueeSpeed.swift === speed,
-  'ng-marquee-speed-hyper': marqueeSpeed.hyper === speed
-}">
+  'ng-marquee-speed-hyper': marqueeSpeed.hyper === speed,
+  'ng-marquee-stop-on-hover': stopOnHover
+}"
+>
   <span>
     <ng-content></ng-content>
   </span>
