--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,19 @@
-<h1 style="text-align: center;">ng-marquee</h1>
+<h1 style="text-align: center;"><a href="github.com/shivarajnaidu/ng-marquee/">ng-marquee</a></h1>
 
 <!-- Content With Any length -->
 
 <section>
   <h2>Content With Any length</h2>
   <ng-marquee>
+    <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
+        https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
+  </ng-marquee>
+</section>
+
+<!-- Stop On Hover -->
+<section>
+  <h2>Stop On Hover</h2>
+  <ng-marquee [stopOnHover]="true">
     <mark>Hello, World.... Find Me @ <a href="https://www.linkedin.com/in/shivarajnaidu/" target="__blank">
         https://www.linkedin.com/in/shivarajnaidu/ (Yuvaraj)</a></mark>
   </ng-marquee>
