--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,6 +79,12 @@
     </ng-marquee>
   </div>
 
+  <div>
+    <h3>Custom</h3>
+    <ng-marquee duration="90s">
+      <ng-container *ngTemplateOutlet="marqueeContent"></ng-container>
+    </ng-marquee>
+  </div>
 
 </section>
 
